[package]
name = "packet-capture"
version = "0.1.0"
edition = "2021"
description = "A CLI packet capture tool with filtering capabilities"
authors = ["Developer"]
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration file parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Packet capture
pnet = "0.35"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# For graceful shutdown
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
opt-level = 3
lto = true
